# two-party-multi-sig

./: Makefile  README.md
contract/: Cargo.toml
contract/src/: main.rs
tests/: Cargo.toml
tests/src/: integration_tests.rs
