[package]
name = "contract"
version = "0.1.0"
authors = ["Karan Dhareshwar <karan@casperlabs.io>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#casper-contract = "1.4.4"
#casper-types = "1.5.0"
casper-contract = "1.4.3"
casper-types = "1.4.6"

[[bin]]
name = "contract"
path = "src/main.rs"
bench = false
doctest = false
test = false
